[gd_scene load_steps=11 format=2]

[ext_resource path="res://pages/RenderText.tscn" type="PackedScene" id=1]
[ext_resource path="res://res/ui/bts1/normal.tres" type="StyleBox" id=2]
[ext_resource path="res://res/ui/bts1/pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://res/ui/bts1/hover.tres" type="StyleBox" id=4]
[ext_resource path="res://pages/sheets/quiz/Page_quiz.gd" type="Script" id=5]
[ext_resource path="res://res/ui/bts2/hover.tres" type="StyleBox" id=6]
[ext_resource path="res://res/ui/bts2/normal.tres" type="StyleBox" id=7]
[ext_resource path="res://res/ui/bts2/pressed.tres" type="StyleBox" id=8]
[ext_resource path="res://res/fonts/merriweather.regular.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[node name="Page_quiz" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Question_mode_carte" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="Question_mode_carte"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Titre" type="Label" parent="Question_mode_carte/VBoxContainer"]
margin_right = 520.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "KEY_QUESTION"
align = 1
valign = 1
autowrap = true

[node name="RenderText" parent="Question_mode_carte/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 44.0
margin_right = 520.0
margin_bottom = 757.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="VBoxContainer" parent="Question_mode_carte/VBoxContainer"]
margin_top = 761.0
margin_right = 520.0
margin_bottom = 940.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
alignment = 1

[node name="Bt_devoiler_cartes" type="Button" parent="Question_mode_carte/VBoxContainer/Control"]
margin_left = 167.0
margin_top = 69.0
margin_right = 353.0
margin_bottom = 109.0
rect_min_size = Vector2( 110, 40 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "KEY_DEVOILER"

[node name="Question_mode_ecrire" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="Question_mode_ecrire"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Titre" type="Label" parent="Question_mode_ecrire/VBoxContainer"]
margin_right = 520.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "KEY_QUESTION"
valign = 1
autowrap = true

[node name="RenderText" parent="Question_mode_ecrire/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 44.0
margin_right = 520.0
margin_bottom = 326.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Control" type="VBoxContainer" parent="Question_mode_ecrire/VBoxContainer"]
margin_top = 330.0
margin_right = 520.0
margin_bottom = 895.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Question_mode_ecrire/VBoxContainer/Control"]
margin_right = 520.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Question_mode_ecrire/VBoxContainer/Control/HBoxContainer"]
margin_top = 5.0
margin_right = 166.0
margin_bottom = 34.0
text = "KEY_REPONSE"

[node name="Bt_View" type="Button" parent="Question_mode_ecrire/VBoxContainer/Control/HBoxContainer"]
margin_left = 170.0
margin_right = 210.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/normal = ExtResource( 7 )

[node name="Bt_Edit" type="Button" parent="Question_mode_ecrire/VBoxContainer/Control/HBoxContainer"]
visible = false
margin_left = 170.0
margin_right = 210.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/normal = ExtResource( 7 )

[node name="TextEdit" type="TextEdit" parent="Question_mode_ecrire/VBoxContainer/Control"]
margin_top = 44.0
margin_right = 520.0
margin_bottom = 565.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RenderText" parent="Question_mode_ecrire/VBoxContainer/Control" instance=ExtResource( 1 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 306.0
margin_right = 520.0
margin_bottom = 565.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bt_devoiler" type="VBoxContainer" parent="Question_mode_ecrire/VBoxContainer"]
margin_top = 899.0
margin_right = 520.0
margin_bottom = 939.0

[node name="Bt_devoiler_ecrire" type="Button" parent="Question_mode_ecrire/VBoxContainer/Bt_devoiler"]
margin_left = 167.0
margin_right = 353.0
margin_bottom = 40.0
rect_min_size = Vector2( 110, 40 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "KEY_DEVOILER"

[node name="Reponse_mode_carte" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="Reponse_mode_carte"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TitreBonneRep" type="Label" parent="Reponse_mode_carte/VBoxContainer"]
margin_right = 520.0
margin_bottom = 29.0
text = "KEY_BONNE_REPONSE"

[node name="RenderText" parent="Reponse_mode_carte/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 33.0
margin_right = 520.0
margin_bottom = 896.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxScore" type="HBoxContainer" parent="Reponse_mode_carte/VBoxContainer"]
margin_top = 900.0
margin_right = 520.0
margin_bottom = 940.0

[node name="TitreNoterConnaissance" type="Label" parent="Reponse_mode_carte/VBoxContainer/HBoxScore"]
margin_top = 8.0
margin_right = 300.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
custom_fonts/font = SubResource( 1 )
text = "KEY_NOTE_KNOWLEDGE"
autowrap = true

[node name="Bt_eval0" type="Button" parent="Reponse_mode_carte/VBoxContainer/HBoxScore"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 304.0
margin_right = 344.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/normal = ExtResource( 7 )
text = "0"

[node name="Bt_eval1" type="Button" parent="Reponse_mode_carte/VBoxContainer/HBoxScore"]
modulate = Color( 0.952941, 0.423529, 0, 1 )
margin_left = 348.0
margin_right = 388.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/normal = ExtResource( 7 )
text = "1"

[node name="Bt_eval2" type="Button" parent="Reponse_mode_carte/VBoxContainer/HBoxScore"]
modulate = Color( 0.839216, 0.647059, 0, 1 )
margin_left = 392.0
margin_right = 432.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/normal = ExtResource( 7 )
text = "2"

[node name="Bt_eval3" type="Button" parent="Reponse_mode_carte/VBoxContainer/HBoxScore"]
modulate = Color( 0.631373, 0.835294, 0, 1 )
margin_left = 436.0
margin_right = 476.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/normal = ExtResource( 7 )
text = "3"

[node name="Bt_eval4" type="Button" parent="Reponse_mode_carte/VBoxContainer/HBoxScore"]
modulate = Color( 0.14902, 1, 0, 1 )
margin_left = 480.0
margin_right = 520.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/normal = ExtResource( 7 )
text = "4"

[node name="HBoxBts" type="HBoxContainer" parent="Reponse_mode_carte/VBoxContainer"]
visible = false
margin_top = 903.0
margin_right = 520.0
margin_bottom = 940.0

[node name="Bt_arreter" type="Button" parent="Reponse_mode_carte/VBoxContainer/HBoxBts"]
margin_right = 258.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "arreter"

[node name="Bt_suivant" type="Button" parent="Reponse_mode_carte/VBoxContainer/HBoxBts"]
margin_left = 262.0
margin_right = 520.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "suivant"

[node name="Reponse_mode_ecrire" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="Reponse_mode_ecrire"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TitreBonneRep" type="Label" parent="Reponse_mode_ecrire/VBoxContainer"]
margin_right = 520.0
margin_bottom = 29.0
text = "KEY_BONNE_REPONSE"

[node name="RenderText" parent="Reponse_mode_ecrire/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 33.0
margin_right = 520.0
margin_bottom = 428.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JUSTE" type="Label" parent="Reponse_mode_ecrire/VBoxContainer"]
modulate = Color( 0.407843, 1, 0, 1 )
margin_top = 432.0
margin_right = 520.0
margin_bottom = 461.0
text = "KEY_JUSTE"
align = 1

[node name="FAUX" type="Label" parent="Reponse_mode_ecrire/VBoxContainer"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_top = 449.0
margin_right = 520.0
margin_bottom = 478.0
text = "KEY_FAUX"
align = 1

[node name="TitreVotreRep" type="Label" parent="Reponse_mode_ecrire/VBoxContainer"]
margin_top = 465.0
margin_right = 520.0
margin_bottom = 494.0
text = "KEY_VOTRE_REPONSE"

[node name="RenderText2" parent="Reponse_mode_ecrire/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 498.0
margin_right = 520.0
margin_bottom = 894.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Reponse_mode_ecrire/VBoxContainer"]
margin_top = 898.0
margin_right = 520.0
margin_bottom = 940.0

[node name="Bt_arreter" type="Button" parent="Reponse_mode_ecrire/VBoxContainer/HBoxContainer"]
margin_right = 258.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "KEY_STOP"

[node name="Bt_suivant" type="Button" parent="Reponse_mode_ecrire/VBoxContainer/HBoxContainer"]
margin_left = 262.0
margin_right = 520.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "KEY_NEXT"

[node name="Ecran_Fin" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0

[node name="VBoxContainer" type="VBoxContainer" parent="Ecran_Fin"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 15
alignment = 1

[node name="Label" type="Label" parent="Ecran_Fin/VBoxContainer"]
margin_top = 381.0
margin_right = 510.0
margin_bottom = 410.0
text = "KEY_FIN_QUIZ"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="Ecran_Fin/VBoxContainer"]
margin_top = 425.0
margin_right = 510.0
margin_bottom = 429.0

[node name="HBoxContainer2" type="HFlowContainer" parent="Ecran_Fin/VBoxContainer"]
margin_top = 444.0
margin_right = 510.0
margin_bottom = 473.0
size_flags_horizontal = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0

[node name="l1" type="Label" parent="Ecran_Fin/VBoxContainer/HBoxContainer2"]
margin_right = 137.0
margin_bottom = 29.0
size_flags_horizontal = 0
text = "KEY_V_EFF"

[node name="nb_q" type="Label" parent="Ecran_Fin/VBoxContainer/HBoxContainer2"]
margin_left = 137.0
margin_right = 151.0
margin_bottom = 29.0
size_flags_horizontal = 0
text = "0"

[node name="l2" type="Label" parent="Ecran_Fin/VBoxContainer/HBoxContainer2"]
margin_left = 151.0
margin_right = 289.0
margin_bottom = 29.0
size_flags_horizontal = 0
text = "KEY_Q_RES"

[node name="score" type="Label" parent="Ecran_Fin/VBoxContainer/HBoxContainer2"]
margin_left = 289.0
margin_right = 326.0
margin_bottom = 29.0
size_flags_horizontal = 2
text = "0%"

[node name="HSeparator2" type="HSeparator" parent="Ecran_Fin/VBoxContainer"]
margin_top = 488.0
margin_right = 510.0
margin_bottom = 492.0

[node name="HBoxContainer" type="HBoxContainer" parent="Ecran_Fin/VBoxContainer"]
margin_top = 507.0
margin_right = 510.0
margin_bottom = 549.0
custom_constants/separation = 15

[node name="Bt_restart_the_same" type="Button" parent="Ecran_Fin/VBoxContainer/HBoxContainer"]
margin_right = 247.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "KEY_DO_SAME"

[node name="Bt_go_menu" type="Button" parent="Ecran_Fin/VBoxContainer/HBoxContainer"]
margin_left = 262.0
margin_right = 510.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "KEY_MENU"

[connection signal="pressed" from="Question_mode_carte/VBoxContainer/Control/Bt_devoiler_cartes" to="." method="_on_Bt_devoiler_cartes_pressed"]
[connection signal="pressed" from="Question_mode_ecrire/VBoxContainer/Control/HBoxContainer/Bt_View" to="." method="_on_Bt_View_pressed"]
[connection signal="pressed" from="Question_mode_ecrire/VBoxContainer/Control/HBoxContainer/Bt_Edit" to="." method="_on_Bt_Edit_pressed"]
[connection signal="pressed" from="Question_mode_ecrire/VBoxContainer/Bt_devoiler/Bt_devoiler_ecrire" to="." method="_on_Bt_devoiler_ecrire_pressed"]
[connection signal="pressed" from="Reponse_mode_carte/VBoxContainer/HBoxScore/Bt_eval0" to="." method="_on_Bt_eval0_pressed"]
[connection signal="pressed" from="Reponse_mode_carte/VBoxContainer/HBoxScore/Bt_eval1" to="." method="_on_Bt_eval1_pressed"]
[connection signal="pressed" from="Reponse_mode_carte/VBoxContainer/HBoxScore/Bt_eval2" to="." method="_on_Bt_eval2_pressed"]
[connection signal="pressed" from="Reponse_mode_carte/VBoxContainer/HBoxScore/Bt_eval3" to="." method="_on_Bt_eval3_pressed"]
[connection signal="pressed" from="Reponse_mode_carte/VBoxContainer/HBoxScore/Bt_eval4" to="." method="_on_Bt_eval4_pressed"]
[connection signal="pressed" from="Reponse_mode_carte/VBoxContainer/HBoxBts/Bt_arreter" to="." method="_on_Bt_arreter_pressed"]
[connection signal="pressed" from="Reponse_mode_carte/VBoxContainer/HBoxBts/Bt_suivant" to="." method="_on_Bt_suivant_pressed"]
[connection signal="pressed" from="Reponse_mode_ecrire/VBoxContainer/HBoxContainer/Bt_arreter" to="." method="_on_Bt_arreter_pressed"]
[connection signal="pressed" from="Reponse_mode_ecrire/VBoxContainer/HBoxContainer/Bt_suivant" to="." method="_on_Bt_suivant_pressed"]
[connection signal="pressed" from="Ecran_Fin/VBoxContainer/HBoxContainer/Bt_restart_the_same" to="." method="_on_Bt_restart_the_same_pressed"]
[connection signal="pressed" from="Ecran_Fin/VBoxContainer/HBoxContainer/Bt_go_menu" to="." method="_on_Bt_go_menu_pressed"]
